--- a/src/saas/basic/_main.scss
+++ b/src/saas/basic/_main.scss
@@ -16,6 +16,12 @@ img {
 	margin: 0 !important;
 	padding: 0 !important;
 	border: 0 !important;
+	transition: transform 0.2s;
+}
+img:hover {
+	-ms-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
 body {
 	font-family: 'Poppins';
