--- a/src/saas/elements/_searchContainer.scss
+++ b/src/saas/elements/_searchContainer.scss
@@ -4,7 +4,7 @@
 	width: 1074px;
 	height: 267px;
 	margin-top: 72px;
-	margin-bottom: 56px;
+	margin-bottom: 100px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -26,5 +26,8 @@
 	height: 56px;
 	border-radius: 12px;
 }
-.search_block_svg {
+.search_svg {
+	position: relative;
+	top: -188px;
+	left: 695px;
 }
