--- a/src/saas/elements/_tryForFreeBlock.scss
+++ b/src/saas/elements/_tryForFreeBlock.scss
@@ -16,6 +16,7 @@
 	color: var(--textAccent);
 	margin-left: 24px;
 	margin-top: 50px;
+	font-family: 'Poppins';
 	font-weight: 600;
 	font-size: 32px;
 	line-height: 48px;
@@ -52,7 +53,7 @@
 	border-radius: 5px;
 	border: none;
 	box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5), 7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
-	background: #57cc99;
+	background: var(--textAccent);
 	z-index: 1;
 }
 .css-button-shadow-border-sliding--green:hover:after {
